# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
documentation/: definition.md  implementation.md  instructions.md  report_week1.md  report_week2.md  testing_report.md
documentation/weekly_reports/: final_report.md  report_week1.md  report_week2.md  report_week3.md  report_week4.md  report_week5.md  report_week6.md  report_week7.md
src/: index.py  ui.py
src/services/: ai.py  board.py  logic.py
src/tests/: ai_test.py  board_test.py  logic_test.py  ui_test.py
