[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Tartsi <tarvo.lilja@hotmail.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
pytest = "^7.4.4"
coverage = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
